Excel/CSV出力できるとこまで、プラグインとしてastahとの繋ぎは未実装

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,7 +1,7 @@
 pluginName = plugin classes2excel
-providerName = Change Vision, Inc.
+providerName = mas0061
 
 action_set_label=Template action set
-menu_group=Template group
-menu_label=&Template menu
-menu_tooltip=plugin template
+menu_group=Export Excel file
+menu_label=&Export class structure
+menu_tooltip=Export class structure
