--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 notifications:
   on_success: never
   on_failure: never
-script:
+install:
   - wget http://astah.change-vision.com/files/plugin/astah-plugin-sdk-latest.zip
   - unzip astah-plugin-sdk-latest.zip
   - export ASDK_HOME=`pwd`/astah-plugin-SDK-1.1
