--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.mas0061.astah.plugin.classes2excel</groupId>
     <artifactId>classes2excel</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
     <name>%bundle.name</name>
     <description>%bundle.description</description>
